--- a/index.html
+++ b/index.html
@@ -104,8 +104,11 @@
           </div>
         </section>
 
-        <section class="feynman"></section>
-
+        <section class="feynman">
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+          <a href="#" class="feynman__link">Подробнее →</a>
+        </section>
         <section class="kaufman"></section>
       </main>
       <footer class="footer"></footer>
