--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
   <body>
     <div class="page">
       <header class="header">
-        <img
-          class="logo logo_place_header"
-          src="./images/logo_place_header.svg"
-          alt="header logo"
-        />
+        <div class="logo logo_place_header"></div>
         <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">
           Какие современные и эффективные подходы к обучению вы можете
@@ -185,7 +181,48 @@
           />
         </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__columns">
+          <div class="footer__column_content_copyright">
+            <div class="logo logo_place_footer"></div>
+            <h3 class="footer__author">© 2019. Виктор Абанькин</h3>
+          </div>
+          <div class="footer__column_content_info">
+            <h3 class="footer__column-heading">О Практикуме</h3>
+            <div class="footer__column-links">
+              <a href="#" class="footer__column-link">Главная</a>
+              <a href="#" class="footer__column-link">Концепция</a>
+              <a href="#" class="footer__column-link">Наставники</a>
+            </div>
+          </div>
+          <div class="footer__column_content_social">
+            <h3 class="footer__column-heading">Соцсети</h3>
+            <div class="footer__column-links">
+              <a href="#" class="footer__column-link">
+                <img
+                  src="./images/facebook_color_white.svg"
+                  alt="facebook icon"
+                  class="footer__social-icon"
+                />Facebook
+              </a>
+              <a href="#" class="footer__column-link">
+                <img
+                  src="./images/vk_color_white.svg"
+                  alt=""
+                  class="footer__social-icon"
+                />ВКонтакте
+              </a>
+              <a href="#" class="footer__column-link">
+                <img
+                  src="./images/instagram_color_white.svg"
+                  alt=""
+                  class="footer__social-icon"
+                />Instagram
+              </a>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
