fix alt language

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </p>
         <img
           src="./images/header-image.png"
-          alt="main image"
+          alt="мальчик и собака"
           class="header__main-illustration"
         />
         <div class="header__square-pic"></div>
@@ -176,7 +176,7 @@
           </div>
           <img
             src="./images/kaufman-triangle.svg"
-            alt="blue triangle"
+            alt="синий треугольник"
             class="kaufman__triangle"
           />
         </section>
@@ -201,21 +201,21 @@
               <a href="#" class="footer__column-link">
                 <img
                   src="./images/facebook_color_white.svg"
-                  alt="facebook icon"
+                  alt="иконка Фейсбука"
                   class="footer__social-icon"
                 />Facebook
               </a>
               <a href="#" class="footer__column-link">
                 <img
                   src="./images/vk_color_white.svg"
-                  alt=""
+                  alt="иконка Вконтакте"
                   class="footer__social-icon"
                 />ВКонтакте
               </a>
               <a href="#" class="footer__column-link">
                 <img
                   src="./images/instagram_color_white.svg"
-                  alt=""
+                  alt="иконка Инстаграм"
                   class="footer__social-icon"
                 />Instagram
               </a>
