fix bem in footer

--- a/index.html
+++ b/index.html
@@ -183,11 +183,11 @@
       </main>
       <footer class="footer">
         <div class="footer__columns">
-          <div class="footer__column_content_copyright">
+          <div class="footer__column footer__column_content_copyright">
             <div class="logo logo_place_footer"></div>
             <h3 class="footer__author">© 2019. Виктор Абанькин</h3>
           </div>
-          <div class="footer__column_content_info">
+          <div class="footer__column footer__column_content_info">
             <h3 class="footer__column-heading">О Практикуме</h3>
             <div class="footer__column-links">
               <a href="#" class="footer__column-link">Главная</a>
@@ -195,7 +195,7 @@
               <a href="#" class="footer__column-link">Наставники</a>
             </div>
           </div>
-          <div class="footer__column_content_social">
+          <div class="footer__column footer__column_content_social">
             <h3 class="footer__column-heading">Соцсети</h3>
             <div class="footer__column-links">
               <a href="#" class="footer__column-link">
