--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           Какие современные и эффективные подходы к обучению вы можете
           использовать в своей жизни?
 
-          <a href="#" class="header__link">Узнать →</a>
+          <a href="#" class="header__link">Узнать &#8594;</a>
         </p>
         <img
           src="./images/header-image.png"
@@ -28,7 +28,7 @@
       <main class="content">
         <section class="description">
           <div class="two-columns">
-            <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
+            <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
                 Ни в школе, ни в институте нас не учат тому, как правильно
@@ -53,7 +53,7 @@
 
         <section class="digits">
           <h2 class="section-title">Цифры и факты</h2>
-          <h3 class="section-subtitle">Про учёбу и мозг</h3>
+          <p class="section-subtitle">Про учёбу и мозг</p>
           <ul class="table">
             <li class="table__cell">
               <h3 class="table__heading">86 миллиардов</h3>
@@ -102,16 +102,16 @@
 
         <section class="feynman">
           <h2 class="feynman__title">Метод Фейнмана</h2>
-          <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-          <a href="#" class="feynman__link">Подробнее →</a>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
+          <a href="#" class="feynman__link">Подробнее &#8594;</a>
         </section>
         <section class="kaufman">
           <h2 class="section-title section-title_theme_dark">
             Принципы обучения
           </h2>
-          <h3 class="section-subtitle section-subtitle_theme_dark">
+          <p class="section-subtitle section-subtitle_theme_dark">
             от Джоша Кауфмана
-          </h3>
+          </p>
           <ul class="table table_theme_dark">
             <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">1</h3>
@@ -174,18 +174,14 @@
               </p>
             </li>
           </ul>
-          <img
-            src="./images/kaufman-triangle.svg"
-            alt="синий треугольник"
-            class="kaufman__triangle"
-          />
+          <div class="kaufman__triangle"></div>
         </section>
       </main>
       <footer class="footer">
         <div class="footer__columns">
           <div class="footer__column footer__column_content_copyright">
             <div class="logo logo_place_footer"></div>
-            <h3 class="footer__author">© 2019. Виктор Абанькин</h3>
+            <p class="footer__author">&#169; 2019. Виктор Абанькин</p>
           </div>
           <div class="footer__column footer__column_content_info">
             <h3 class="footer__column-heading">О Практикуме</h3>
