--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Научиться учиться</title>
-    <link rel="stylesheet" href="./styles/normalize.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body>
     <div class="page">
@@ -105,6 +104,7 @@
           <p class="feynman__subtitle">Выучить и не забыть.</p>
           <a href="#" class="feynman__link">Подробнее &#8594;</a>
         </section>
+
         <section class="kaufman">
           <h2 class="section-title section-title_theme_dark">
             Принципы обучения
