--- a/index.html
+++ b/index.html
@@ -283,7 +283,16 @@
           <div class="kaufman__triangle"></div>
         </section>
 
-        <section class="resources"></section>
+        <section class="resources">
+          <h2 class="section-title">Полезные ресурсы</h2>
+          <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+          <div class="resources__logo-zone">
+            <img src="/images/resources-arzamas.svg" alt="логотип Arzamas" class="resources__logo">
+            <img src="/images/resources-n1.svg" alt="логотип n+1" class="resources__logo">
+            <img src="/images/resources-strelka.svg" alt="логотип Strelka" class="resources__logo">
+            <img src="/images/resources-polka.svg" alt="логотип Полка" class="resources__logo">
+          </div>
+        </section>
       </main>
       <footer class="footer">
         <div class="footer__columns">
