--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
               class="video__iframe"
               src="https://www.youtube.com/embed/5MgBikgcWnY"
               title="YouTube video player"
-              frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
             ></iframe>
@@ -113,7 +112,6 @@
               class="video__iframe"
               src="https://www.youtube.com/embed/arj7oStGLkU"
               title="YouTube video player"
-              frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
             ></iframe>
@@ -206,7 +204,7 @@
             <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
             <div class="khan__book-container">
               <div class="khan__book-pic"></div>
-              <a class="khan__buy-link" href="#">Купить книгу &#8594</a>
+              <a class="khan__buy-link" href="#">Купить книгу &#8594;</a>
             </div>
           </div>
         </section>
@@ -285,12 +283,30 @@
 
         <section class="resources">
           <h2 class="section-title">Полезные ресурсы</h2>
-          <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+          <p class="section-subtitle">
+            Больше материалов о техниках и лайфхаках обучения
+          </p>
           <div class="resources__logo-zone">
-            <img src="/images/resources-arzamas.svg" alt="логотип Arzamas" class="resources__logo">
-            <img src="/images/resources-n1.svg" alt="логотип n+1" class="resources__logo">
-            <img src="/images/resources-strelka.svg" alt="логотип Strelka" class="resources__logo">
-            <img src="/images/resources-polka.svg" alt="логотип Полка" class="resources__logo">
+            <img
+              src="/images/resources-arzamas.svg"
+              alt="логотип Arzamas"
+              class="resources__logo"
+            />
+            <img
+              src="/images/resources-n1.svg"
+              alt="логотип n+1"
+              class="resources__logo"
+            />
+            <img
+              src="/images/resources-strelka.svg"
+              alt="логотип Strelka"
+              class="resources__logo"
+            />
+            <img
+              src="/images/resources-polka.svg"
+              alt="логотип Полка"
+              class="resources__logo"
+            />
           </div>
         </section>
       </main>
