--- a/index.html
+++ b/index.html
@@ -288,22 +288,22 @@
           </p>
           <div class="resources__logo-zone">
             <img
-              src="/images/resources-arzamas.svg"
+              src="./images/resources-arzamas.svg"
               alt="логотип Arzamas"
               class="resources__logo"
             />
             <img
-              src="/images/resources-n1.svg"
+              src="./images/resources-n1.svg"
               alt="логотип n+1"
               class="resources__logo"
             />
             <img
-              src="/images/resources-strelka.svg"
+              src="./images/resources-strelka.svg"
               alt="логотип Strelka"
               class="resources__logo"
             />
             <img
-              src="/images/resources-polka.svg"
+              src="./images/resources-polka.svg"
               alt="логотип Полка"
               class="resources__logo"
             />
