--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
           alt="мальчик и собака"
           class="header__main-illustration"
         />
-        <div class="header__square-pic"></div>
+        <div class="header__square-pic rotation"></div>
       </header>
       <main class="content">
         <section class="description">
-          <div class="two-columns">
+          <article class="two-columns">
             <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
@@ -47,7 +47,7 @@
                 техники применяются на примере обучения в Практикуме.
               </p>
             </div>
-          </div>
+          </article>
         </section>
 
         <section class="techniques">
@@ -119,9 +119,10 @@
         </section>
 
         <section class="oakley">
-          <div class="two-columns">
+          <article class="two-columns">
             <h2 class="two-columns__brief">История Барбары Оакли.</h2>
-            <p class="two-columns__main-text two-columns__paragraph">
+            <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">
               С детства Барбаре не давалась математика. Она считала себя
               законченным гуманитарием, причём далеко не самым умным. В армии
               она изучала русский язык, чтобы получить надбавку, да так успешно,
@@ -203,7 +204,7 @@
             <p class="khan__quote-author">Джордж Лукас</p>
             <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
             <div class="khan__book-container">
-              <div class="khan__book-pic"></div>
+              <img src="../../../images/khan-book.jpg" alt="обложка книги Весь мир - школа" class="khan__book-pic">
               <a class="khan__buy-link" href="#">Купить книгу &#8594;</a>
             </div>
           </div>
@@ -278,7 +279,7 @@
               </p>
             </li>
           </ul>
-          <div class="kaufman__triangle"></div>
+          <div class="kaufman__triangle rotation"></div>
         </section>
 
         <section class="resources">
@@ -287,26 +288,22 @@
             Больше материалов о техниках и лайфхаках обучения
           </p>
           <div class="resources__logo-zone">
-            <img
+            <a href="#" class="resources__logo"><img
               src="./images/resources-arzamas.svg"
               alt="логотип Arzamas"
-              class="resources__logo"
-            />
-            <img
+            /></a>
+            <a href="#" class="resources__logo"><img
               src="./images/resources-n1.svg"
               alt="логотип n+1"
-              class="resources__logo"
-            />
-            <img
+            /></a>
+            <a href="#" class="resources__logo"><img
               src="./images/resources-strelka.svg"
               alt="логотип Strelka"
-              class="resources__logo"
-            />
-            <img
+            /></a>
+            <a href="#" class="resources__logo"><img
               src="./images/resources-polka.svg"
               alt="логотип Полка"
-              class="resources__logo"
-            />
+            /></a>
           </div>
         </section>
       </main>
