--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <p class="section-subtitle">Пять практик от Барбары Оакли</p>
           <ul class="cards">
             <li class="cards__item">
-              <div class="cards__image"></div>
+              <img src="../../../images/cards-attention.png" alt="книга" class="cards__image">
               <h3 class="cards__title">Два вида внимания</h3>
               <p class="cards__description">
                 Глубокие знания возникают, если чередовать сфокусированное и
@@ -63,7 +63,7 @@
               </p>
             </li>
             <li class="cards__item">
-              <div class="cards__image"></div>
+              <img src="../../../images/cards-recall.png" alt="статуя" class="cards__image">
               <h3 class="cards__title">Recall</h3>
               <p class="cards__description">
                 Вспоминайте изученное — это позволит соединить разрозненные
@@ -71,7 +71,7 @@
               </p>
             </li>
             <li class="cards__item">
-              <div class="cards__image"></div>
+              <img src="../../../images/cards-interliving.png" alt="люди в комнате" class="cards__image">
               <h3 class="cards__title">Интерливинг</h3>
               <p class="cards__description">
                 Изучайте несколько навыков одновременно, они обогащают друг
@@ -79,7 +79,7 @@
               </p>
             </li>
             <li class="cards__item">
-              <div class="cards__image"></div>
+              <img src="../../../images/cards-question.png" alt="человек в комнате" class="cards__image">
               <h3 class="cards__title">Вопросы</h3>
               <p class="cards__description">
                 Слушая преподавателя, придумывайте хороший вопрос, который вас
@@ -87,7 +87,7 @@
               </p>
             </li>
             <li class="cards__item">
-              <div class="cards__image"></div>
+              <img src="../../../images/cards-competence.png" alt="стопка книг" class="cards__image">
               <h3 class="cards__title">Иллюзия компетентности</h3>
               <p class="cards__description">
                 Повторите про себя, запишите, расскажите другу: вам только
