--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </header>
       <main class="content">
         <section class="description">
-          <article class="two-columns">
+          <div class="two-columns">
             <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
@@ -47,7 +47,7 @@
                 техники применяются на примере обучения в Практикуме.
               </p>
             </div>
-          </article>
+          </div>
         </section>
 
         <section class="techniques">
@@ -55,7 +55,11 @@
           <p class="section-subtitle">Пять практик от Барбары Оакли</p>
           <ul class="cards">
             <li class="cards__item">
-              <img src="../../../images/cards-attention.png" alt="книга" class="cards__image">
+              <img
+                src="../../../images/cards-attention.png"
+                alt="книга"
+                class="cards__image"
+              />
               <h3 class="cards__title">Два вида внимания</h3>
               <p class="cards__description">
                 Глубокие знания возникают, если чередовать сфокусированное и
@@ -63,7 +67,11 @@
               </p>
             </li>
             <li class="cards__item">
-              <img src="../../../images/cards-recall.png" alt="статуя" class="cards__image">
+              <img
+                src="../../../images/cards-recall.png"
+                alt="статуя"
+                class="cards__image"
+              />
               <h3 class="cards__title">Recall</h3>
               <p class="cards__description">
                 Вспоминайте изученное — это позволит соединить разрозненные
@@ -71,7 +79,11 @@
               </p>
             </li>
             <li class="cards__item">
-              <img src="../../../images/cards-interliving.png" alt="люди в комнате" class="cards__image">
+              <img
+                src="../../../images/cards-interliving.png"
+                alt="люди в комнате"
+                class="cards__image"
+              />
               <h3 class="cards__title">Интерливинг</h3>
               <p class="cards__description">
                 Изучайте несколько навыков одновременно, они обогащают друг
@@ -79,7 +91,11 @@
               </p>
             </li>
             <li class="cards__item">
-              <img src="../../../images/cards-question.png" alt="человек в комнате" class="cards__image">
+              <img
+                src="../../../images/cards-question.png"
+                alt="человек в комнате"
+                class="cards__image"
+              />
               <h3 class="cards__title">Вопросы</h3>
               <p class="cards__description">
                 Слушая преподавателя, придумывайте хороший вопрос, который вас
@@ -87,7 +103,11 @@
               </p>
             </li>
             <li class="cards__item">
-              <img src="../../../images/cards-competence.png" alt="стопка книг" class="cards__image">
+              <img
+                src="../../../images/cards-competence.png"
+                alt="стопка книг"
+                class="cards__image"
+              />
               <h3 class="cards__title">Иллюзия компетентности</h3>
               <p class="cards__description">
                 Повторите про себя, запишите, расскажите другу: вам только
@@ -119,19 +139,20 @@
         </section>
 
         <section class="oakley">
-          <article class="two-columns">
+          <div class="two-columns">
             <h2 class="two-columns__brief">История Барбары Оакли.</h2>
             <div class="two-columns__main-text">
-            <p class="two-columns__paragraph">
-              С детства Барбаре не давалась математика. Она считала себя
-              законченным гуманитарием, причём далеко не самым умным. В армии
-              она изучала русский язык, чтобы получить надбавку, да так успешно,
-              что её выдвинули в командиры. Но для продвижения по службе нужно
-              было сдавать математику. И тогда Барбара придумала свой подход к
-              точным наукам. Оказалось, если вам что-то «плохо даётся», ваши
-              добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с
-              первого взгляда.
-            </p>
+              <p class="two-columns__paragraph">
+                С детства Барбаре не давалась математика. Она считала себя
+                законченным гуманитарием, причём далеко не самым умным. В армии
+                она изучала русский язык, чтобы получить надбавку, да так
+                успешно, что её выдвинули в командиры. Но для продвижения по
+                службе нужно было сдавать математику. И тогда Барбара придумала
+                свой подход к точным наукам. Оказалось, если вам что-то «плохо
+                даётся», ваши добытые трудом знания гораздо глубже, чем у тех,
+                кому всё ясно с первого взгляда.
+              </p>
+            </div>
           </div>
         </section>
 
@@ -204,7 +225,11 @@
             <p class="khan__quote-author">Джордж Лукас</p>
             <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
             <div class="khan__book-container">
-              <img src="../../../images/khan-book.jpg" alt="обложка книги Весь мир - школа" class="khan__book-pic">
+              <img
+                src="../../../images/khan-book.jpg"
+                alt="обложка книги Весь мир - школа"
+                class="khan__book-pic"
+              />
               <a class="khan__buy-link" href="#">Купить книгу &#8594;</a>
             </div>
           </div>
@@ -288,21 +313,17 @@
             Больше материалов о техниках и лайфхаках обучения
           </p>
           <div class="resources__logo-zone">
-            <a href="#" class="resources__logo"><img
-              src="./images/resources-arzamas.svg"
-              alt="логотип Arzamas"
+            <a href="#" class="resources__logo"
+              ><img src="./images/resources-arzamas.svg" alt="логотип Arzamas"
             /></a>
-            <a href="#" class="resources__logo"><img
-              src="./images/resources-n1.svg"
-              alt="логотип n+1"
+            <a href="#" class="resources__logo"
+              ><img src="./images/resources-n1.svg" alt="логотип n+1"
             /></a>
-            <a href="#" class="resources__logo"><img
-              src="./images/resources-strelka.svg"
-              alt="логотип Strelka"
+            <a href="#" class="resources__logo"
+              ><img src="./images/resources-strelka.svg" alt="логотип Strelka"
             /></a>
-            <a href="#" class="resources__logo"><img
-              src="./images/resources-polka.svg"
-              alt="логотип Полка"
+            <a href="#" class="resources__logo"
+              ><img src="./images/resources-polka.svg" alt="логотип Полка"
             /></a>
           </div>
         </section>
