--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <ul class="cards">
             <li class="cards__item">
               <img
-                src="../../../images/cards-attention.png"
+                src="./images/cards-attention.png"
                 alt="книга"
                 class="cards__image"
               />
@@ -68,7 +68,7 @@
             </li>
             <li class="cards__item">
               <img
-                src="../../../images/cards-recall.png"
+                src="./images/cards-recall.png"
                 alt="статуя"
                 class="cards__image"
               />
@@ -80,7 +80,7 @@
             </li>
             <li class="cards__item">
               <img
-                src="../../../images/cards-interliving.png"
+                src="./images/cards-interliving.png"
                 alt="люди в комнате"
                 class="cards__image"
               />
@@ -92,7 +92,7 @@
             </li>
             <li class="cards__item">
               <img
-                src="../../../images/cards-question.png"
+                src="./images/cards-question.png"
                 alt="человек в комнате"
                 class="cards__image"
               />
@@ -104,7 +104,7 @@
             </li>
             <li class="cards__item">
               <img
-                src="../../../images/cards-competence.png"
+                src="./images/cards-competence.png"
                 alt="стопка книг"
                 class="cards__image"
               />
@@ -226,7 +226,7 @@
             <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
             <div class="khan__book-container">
               <img
-                src="../../../images/khan-book.jpg"
+                src="./images/khan-book.jpg"
                 alt="обложка книги Весь мир - школа"
                 class="khan__book-pic"
               />
